<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

     <ImageView
        android:id="@+id/iv_tempor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="40dp"
        android:background="@mipmap/denglu_or" />

    <LinearLayout
        android:id="@+id/ll_templayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_tempor"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/qq"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:background="@drawable/idolpro_btn_qq"
                android:clickable="true" />

            <TextView
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="@string/login_qq"
                android:textColor="@color/idolproj_black_b"
                android:textSize="12dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/weixin"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:background="@drawable/idolpro_btn_weixin"
                android:clickable="true" />

            <TextView
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="@string/login_weixin"
                android:textColor="@color/idolproj_black_b"
                android:textSize="12dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/weibo"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:background="@drawable/idolpro_btn_weibo"
                android:clickable="true" />

            <TextView
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="@string/login_weibo"
                android:textColor="@color/idolproj_black_b"
                android:textSize="12dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_templayout"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:visibility="invisible" >

            <ImageView
                android:id="@+id/renren"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:background="@drawable/idolpro_btn_renren"
                android:clickable="true" />

            <TextView
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="@string/login_renren"
                android:textColor="@color/idolproj_black_b"
                android:textSize="12dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:visibility="invisible" >

            <ImageView
                android:id="@+id/facebook"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:background="@drawable/idolpro_btn_facebook"
                android:clickable="true" />

            <TextView
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="@string/login_facebook"
                android:textColor="@color/idolproj_black_b"
                android:textSize="12dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:visibility="invisible" >

            <ImageView
                android:id="@+id/twitter"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:background="@drawable/idolpro_btn_twitter"
                android:clickable="true" />

            <TextView
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="@string/login_twitter"
                android:textColor="@color/idolproj_black_b"
                android:textSize="12dp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>